syntax = "proto3";

package greet;
option go_package="./greet_s/greet_s";

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;

}

message GreetManyTimesRequest {
  Greeting greeting = 1;

}


message GreetResponse {
  string result = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  string input = 1;
}

message LongGreetResponse{
  string output = 1;
}

service GreetService{
  rpc Greet(GreetRequest)returns(GreetResponse){};

  rpc  GreetManyTimes(GreetManyTimesRequest)returns(stream GreetManyTimesResponse){};

  rpc  LongGreet(stream LongGreetRequest)returns(LongGreetResponse){};
}